den1-k8s01/warehouse20/plex-farnsworth/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex-farnsworth
  namespace: warehouse20
  labels:
    app: plex
    instance: farnsworth
  annotations:
     fluxcd.io/automated: 'true'
     fluxcd.io/tag.plex: glob:1.*
spec:
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plex
      instance: farnsworth
  template:
    metadata:
      labels:
        app: plex
        instance: farnsworth
    spec:
      automountServiceAccountToken: false
      containers:
      - name: farnsworth
        image: plexinc/pms-docker:1.24.5.5173-8dcc73a59
        livenessProbe:
          initialDelaySeconds: 20
          failureThreshold: 5
          timeoutSeconds: 5
          httpGet:
            path: /identity
            port: https
        readinessProbe:
          initialDelaySeconds: 20
          failureThreshold: 5
          timeoutSeconds: 5
          httpGet:
            path: /identity
            port: https
        ports:
          - containerPort: 32400
            name: https
        resources:
          requests:
            cpu: 1000m
            gpu.intel.com/i915: 1
            memory: "4Gi"
          limits:
            cpu: 4000m
            gpu.intel.com/i915: 1
            memory: "8Gi"
        volumeMounts:
        - mountPath: /config
          name: config
          subPath: plex
        - mountPath: /transcode
          name: tmp-storage
        - mountPath: /tmp
          name: tmp-storage
        - mountPath: /mnt/media/store01
          name: store01-media
      volumes:
        - name: config
          persistentVolumeClaim:
              claimName: plex-farnsworth-data
        - name: tmp-storage
          emptyDir: {}
        - name: store01-media
          persistentVolumeClaim:
            claimName: media-store01
