den1-k8s01/warehouse20/plex-farnsworth/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # nginx.ingress.kubernetes.io/enable-access-log: "false"
  labels:
    app: plex
    instance: farnsworth
  name: plex-farnsworth
  namespace: warehouse20
spec:
  rules:
  - host: farnsworth.warehouse20.com
    http:
      paths:
      - backend:
          serviceName: plex-farnsworth
          servicePort: 32400
        path: /
  tls:
  - hosts:
    - "farnsworth.warehouse20.com"
    secretName: farnsworth-tls
