den1-k8s01/warehouse20/plex-farnsworth/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: plex-farnsworth
  namespace: warehouse20
spec:
  podSelector:
    matchLabels:
      app: plex
      instance: farnsworth
  policyTypes:
  - Ingress
  ingress:
  - from: []
    ports:
    - protocol: TCP
      port: https
